# voice-ai

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py   main.py
backend/app/agents/: agent.py
backend/app/services/: memory.py  tts.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
