[project]
name = "voice-ai-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "gtts>=2.5.4",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "requests>=2.33.1",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "wikipedia>=1.4.0",
]
